<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/etPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priority"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load" />

    <Button
        android:id="@+id/btnLoadOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loador" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/tvShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </ScrollView>

</LinearLayout>